TrickyWord Android App Version: 1.02

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TrickyWords</string>
+    <string name="exitMessage">"Bye Bye TrickingWord!! "</string>
 </resources>
