TrickyWord Android App Version: 1.03

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TrickyWords</string>
     <string name="exitMessage">"Bye Bye TrickingWord!! "</string>
+    <string name="buttonReturn">Button to return</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_progress">Progress</string>
 </resources>
